# design-patterns

./: .gitignore  CMakeLists.txt
creational/factory/: CMakeLists.txt
creational/factory/method/: CMakeLists.txt
creational/factory/method/include/factory/method/: ConcreteProduct.h  Creator.h  Product.h
creational/factory/method/sources/: ConcreteProduct.cpp  Creator.cpp
targets/creational/factory/method/: CMakeLists.txt  basic.cpp
